      - Was previously looking for the closest placeable position, and teleporting the player's view there
      - Can't seem to find a solution for the ping being misplaced when the character dies though, apologies
  Misc:
    - Changed changelog date format
---------------------------------------------------------------------------------------------------
Version: 0.5.1
Date: 29. 04. 2025
  Bug fixes:
    - Satellite quality effects are no longer hard-coded and are now programmatically calculated
      Should (hopefully) allow for support of mod added quality levels
      The difference between "Epic" and "Legendary" should now match Vanilla more appropriately
      - Formula now is as follows:
      -> Settings_Service.get_satellite_base_quality_factor()^(prototypes.quality[quality].level)
      - Where satellite_base_quality_factor default is 1.3
      -> Is a configurable runtime setting
      Thanks to sh4dow for the suggestion and pointers!
    - Updated initialization/version validation logic
      Should maintain satellite data on version updates
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 2025-04-26
  Minor Features:
    - Added Satellite scanning
      - Two modes: queue (default) and stack
      If more than one satellite is in orbit, pressing the satellite shortcut/hotkey ('m' by default) will select the scanning tool
      Click and drag the area to scan
      Make sure to enable scanning via the hotkey, "ctrl + space" by default
      Clear all current and staged scans via hotkey, "ctrl + shift + space" by default
    - Added "Satellite Mode"
      Effectively "Remote View" but it also will reveal new areas of the map
      - Allowed if the number of satellites in orbit of a given planet is >= the satellite launch threshold for the given planet
      - Not allowed when the player/character is in space
    - Major refactoring of almost every file