@@ -48,33 +48,6 @@ function player_service.toggle_satellite_mode(event)
     })
 
     if (player.controller_type == defines.controllers.god) then
-      -- Log.error("1")
-      -- if (player_data.controller_type == defines.controllers.character) then
-      --   Log.error("2")
-      --   local character_position
-      --   if (not player_data.character_data.character or not player_data.character_data.character.valid) then
-      --     Log.error("3")
-      --     character_position = player_data.character_data.position
-      --   else
-      --     Log.error("4")
-      --     character_position = player_data.character_data.character.position
-      --   end
-      --   Log.error("5")
-
-      --   local no_character = false
-      --   if (character_position == nil) then
-      --     Log.error("6")
-      --     no_character = true
-      --     character_position = player_data.position
-      --   end
-      --   Log.error("7")
-
-      --   position_to_place = physical_surface.can_place_entity({ name = "character", position = character_position })
-      --                   and character_position
-      --                   or  physical_surface.find_non_colliding_position("character", character_position, 42, 0.01)
-      -- end
-      -- Log.error("8")
-
       -- raise_teleported = true
       player.teleport(position_to_place, physical_surface, true)
 
@@ -96,9 +69,6 @@ function player_service.toggle_satellite_mode(event)
     elseif (player.controller_type == defines.controllers.remote) then
       local toggled = false
 
-      -- if (player_data.controller_type == defines.controllers.remote or player_data.controller_type == defines.controllers.god) then
-      --   toggled = false
-      -- elseif (player_data.controller_type == defines.controllers.character) then
       if (player_data.controller_type == defines.controllers.character) then
         player.set_controller({ type = defines.controllers.god })
         toggled = true
@@ -151,23 +121,9 @@ function player_service.disable_satellite_mode_and_die(data)
   local player_data = Player_Repository.get_player_data(player_index)
   if (not player_data or not player_data.valid) then return end
 
-  -- -- local position_to_place = surface.can_place_entity({ name = "character", position = character_position })
-  -- --                       and character_position
-  -- --                       or  surface.find_non_colliding_position("character", character_position, 84, 0.01)
-  -- local position_to_place = surface.can_place_entity({ name = "character", position = character_position })
-  --                       and character_position
-  --                       or  player_data.physical_position
-
-  -- raise_teleported = true
-  -- player.teleport(position_to_place, surface, true)
-  -- player.teleport(position_to_place, surface)
-  -- player.teleport(character_position, surface, true)
   player.set_controller({ type = defines.controllers.god })
   player.create_character(character)
   player.game_view_settings.show_surface_list = true
-
-  -- local player_data = Player_Repository.get_player_data(player_index)
-  -- if (not player_data.valid) then return end
 
   player.force = player_data.force_index_stashed or 1
 
