@@ -11,6 +11,7 @@ Date: 2025-06-29
       - Can't seem to find a solution for the ping being misplaced when the character dies though, apologies
   Misc:
     - Changed changelog date format
+    - Refactored .lua scripts from "control" directory to "scripts" directory
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.1
 Date: 29. 04. 2025
